# taxbynav-backend

./: .dockerignore  Dockerfile  LICENSE  README.md  backend-standards.md  docker-entrypoint.sh  pyproject.toml
app/: __init__.py  main.py
app/api/: deps.py
app/api/routes/: appointments.py  auth.py  reviews.py  slots.py
app/api/schemas/: appointment.py  auth.py
app/core/: config.py  db.py  security.py
app/models/: __init__.py  appointment.py  refresh_token.py  user.py
app/services/: appointment_service.py  auth_service.py  email_service.py  google_auth_service.py  reviews_service.py  slot_service.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_appointments_contact_mode.py  003_guest_booking_support.py
tests/: test_health.py
